Fix trapezium alignment
The trapeziums were not aligned correctly.  This commit addresses this issue.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -112,63 +111,62 @@
 
 .trapezium-corner {
   @apply absolute pointer-events-none;
-  width: 200px;
-  height: 200px;
-  top: -30px;
+  width: 300px;
+  height: 100px;
 }
 
 .trapezium-corner::before {
   content: '';
   position: absolute;
   width: 100%;
-  height: 30px;
+  height: 40px;
   background: linear-gradient(to right, rgba(255,255,255,0.15), rgba(255,255,255,0.05));
 }
 
 .trapezium-top-left {
-  left: -30px;
-}
-
-.trapezium-top-left::before {
-  top: 30px;
-  left: 30px;
-  transform: skew(-45deg);
+  top: 0;
+  left: -20px;
   transform-origin: left top;
 }
 
-.trapezium-top-right {
-  right: -30px;
+.trapezium-top-left::before {
+  top: 0;
+  left: 0;
+  transform: skew(-45deg);
 }
 
-.trapezium-top-right::before {
-  top: 30px;
-  right: 30px;
-  transform: skew(45deg);
+.trapezium-top-right {
+  top: 0;
+  right: -20px;
   transform-origin: right top;
 }
 
-.trapezium-bottom-left {
-  bottom: -30px;
-  top: auto;
-  left: -30px;
+.trapezium-top-right::before {
+  top: 0;
+  right: 0;
+  transform: skew(45deg);
 }
 
-.trapezium-bottom-left::before {
-  bottom: 30px;
-  left: 30px;
-  transform: skew(45deg);
+.trapezium-bottom-left {
+  bottom: 0;
+  left: -20px;
   transform-origin: left bottom;
 }
 
+.trapezium-bottom-left::before {
+  bottom: 0;
+  left: 0;
+  transform: skew(45deg);
+}
+
 .trapezium-bottom-right {
-  bottom: -30px;
-  top: auto;
-  right: -30px;
+  bottom: 0;
+  right: -20px;
+  transform-origin: right bottom;
 }
 
 .trapezium-bottom-right::before {
-  bottom: 30px;
-  right: 30px;
+  bottom: 0;
+  right: 0;
   transform: skew(-45deg);
-  transform-origin: right bottom;
 }
